  * raggle: redo the String#reflow fix (I changed it to show Richard
    why it broke, and accidentally recommitted it that way)

* Thu Jun 26 21:29:15 2003, richlowe <richlowe@richlowe.net>
  * raggle: Bind ^L to refresh the screen (this uses a literal ^L in the
            code, this is evil)

* Thu Jun 26 23:46:27 2003, richlowe <richlowe@richlowe.net>
  * raggle.1: Document 's', 'o', 'm', '!' and 'n' in the KEYS section.
  * raggle: Document 'm', '!' and 'n' in the Keyboard section of the
            internal documentation feed.

* Fri Jun 27 17:14:16 2003, pabs <pabs@pablotron.org>
  * raggle: fix bug in FeedList#edit so --save-items works again
  
* Fri Jun 27 17:57:16 2003, pabs <pabs@pablotron.org>
  * TODO: add new ideas to list
  * raggle: change 'Q' to 'q' in inline keyboard documentation

* Fri Jun 27 18:56:47 2003, pabs <pabs@pablotron.org>
  * remove old/

* Sat Jun 28 15:18:30 2003, pabs <pabs@pablotron.org>
  * removed rss_grab.rb 
  * added extras/rss_grab.rb
  * added extras/feed_sizes.rb

* Mon Jun 30 21:13:06 2003, pabs <pabs@pablotron.org>
  * raggle: make --list-feeds handle feed titles and urls with %
    characters in them

* Mon Jun 30 21:18:02 2003, pabs <pabs@pablotron.org>
  * raggle: applied patch from Ville Aine: make sure HTTP connections
    are closed, even when an exception is raised

* Mon Jun 30 21:22:30 2003, pabs <pabs@pablotron.org>
  * raggle: aplied patch from Ville Aine: select_next_unread shouldn't
    crash if there's no unread items

* Mon Jun 30 21:30:28 2003, pabs <pabs@pablotron.org>
  * raggle: applied patch from Ville Aine: Key::delete shouldn't crash
    if the feed list is empty

* Mon Jun 30 21:56:33 2003, pabs <pabs@pablotron.org>
  * AUTHORS: updated Ville's entry and Richard's entry, added Richard
    Zidlicky

* Mon Jun 30 22:56:03 2003, pabs <pabs@pablotron.org>
  * raggle: applied Ville Aine's import/export OPML patch
  * raggle.1: applied Ville Aine's import/export OPML patch




